fix wrong positioning on first click events

--- a/src/modules/map/components/contextMenu/mapContextMenu.css
+++ b/src/modules/map/components/contextMenu/mapContextMenu.css
@@ -1,9 +1,71 @@
 .context-menu {
+  --mouse-x: 0;
+  --mouse-y: 0;
   display: none;
   position: fixed;
-  z-index: 10;
+  margin: 0;
+  left: 0;
+  top: 0;
   background-color: var(--primary-bg-color);
   border: 3px solid var(--primary-color);
+  display: block;
+}
+
+/* sector: */
+/* 0-1 */
+/* 3-2	 */
+/* 100% when used inside a translate, yields the current element width !!*/
+
+.sector-0 {
+  transform: translateX(calc(var(--mouse-x))) translateY(calc(var(--mouse-y)));
+}
+
+.sector-0:after {
+  content: '';
+  position: absolute;
+  border-top: 20px solid transparent;
+  border-left: 20px solid var(--primary-color);
+  top: -23px;
+  left: -3px;
+}
+
+.sector-1 {
+  transform: translateX(calc(var(--mouse-x) - 100%)) translateY(calc(var(--mouse-y)));
+}
+
+.sector-1:after {
+  content: '';
+  position: absolute;
+  border-top: 20px solid transparent;
+  border-right: 20px solid var(--primary-color);
+  top: -23px;
+  right: -3px;
+}
+
+.sector-2 {
+  transform: translateX(calc(var(--mouse-x) - 100%)) translateY(calc(var(--mouse-y) - 100%));
+}
+
+.sector-2:after {
+  content: '';
+  position: absolute;
+  border-bottom: 20px solid transparent;
+  border-right: 20px solid var(--primary-color);
+  bottom: -23px;
+  right: -3px;
+}
+
+.sector-3 {
+  transform: translateX(calc(var(--mouse-x))) translateY(calc(var(--mouse-y) - 100%));
+}
+
+.sector-3:after {
+  content: '';
+  position: absolute;
+  border-bottom: 20px solid transparent;
+  border-left: 20px solid var(--primary-color);
+  bottom: -23px;
+  left: -3px;
 }
 
 .header {
@@ -15,54 +77,6 @@
   padding-bottom: 6px;
 }
 
-.close{
+.close {
   float: right;
-}
-
-.active {
-  display: block;
-}
-
-.top-left{
-}
-.top-left:after{
-  content: '';
-  position: absolute;
-  border-top: 20px solid transparent;
-  border-left: 20px solid var(--primary-color);
-  top: -23px;
-  left: -3px;
-}
-
-.top-right{
-}
-.top-right:after{
-  content: '';
-  position: absolute;
-  border-top: 20px solid transparent;
-  border-right: 20px solid var(--primary-color);
-  top: -23px;
-  right: -3px;
-}
-
-.bottom-left{
-}
-.bottom-left:after{
-  content: '';
-  position: absolute;
-  border-bottom: 20px solid transparent;
-  border-left: 20px solid var(--primary-color);
-  bottom: -23px;
-  left: -3px;
-}
-
-.bottom-right{
-}
-.bottom-right:after{
-  content:'';
-  position: absolute;
-  border-bottom: 20px solid transparent;
-  border-right: 20px solid var(--primary-color);
-  bottom: -23px;
-  right: -3px;
 }
